# QA.test

./: .gitmodules  setup_project.sh
maps/: my_map.pgm  my_map.yaml
src/send_coordinates/: package.xml  setup.cfg  setup.py
src/send_coordinates/send_coordinates/: send_goal.py
